--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Search + Info + Map with In‑Input Clear</title>
+  <title>MBTA Municipalities Explorer</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     html, body {
@@ -10,10 +10,47 @@
       font-family: 'Roboto', sans-serif;
     }
     #container {
-      position: relative; width: 100%; height: 100%;
+      position: relative;
+      width: 100%; height: 100%;
     }
 
-    /* Info panel */
+    /* -------- Intro Overlay -------- */
+    #introOverlay {
+      position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.5);
+      display: flex; justify-content: center; align-items: center;
+      z-index: 100;
+    }
+    #introPopup {
+      background: #fff;
+      border-radius: 8px;
+      max-width: 400px;
+      width: 90%;
+      padding: 24px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    #introPopup p {
+      margin: 0 0 20px;
+      font-size: 1em;
+      line-height: 1.4;
+      color: #333;
+    }
+    #startButton {
+      background-color: #003b56;
+      color: #fff;
+      font-weight: 700;
+      padding: 12px 24px;
+      font-size: 1em;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    #startButton:hover {
+      background-color: #00283b;
+    }
+
+    /* -------- Info Panel -------- */
     #infoPanel {
       position: absolute; top: 0; left: -320px;
       width: 320px; height: 100%;
@@ -23,130 +60,147 @@
       transition: left 0.5s ease;
       z-index: 5;
     }
-    #container.info-open #infoPanel { left: 0; }
-
-    /* Big “X” close */
-    #closePanel {
-      position: absolute; top: 8px; right: 8px;
-      font-size: 60px;      /* ~3× bigger */
-      line-height: 1;
-      background: none; border: none;
-      color: #ccc; cursor: pointer;
-      padding: 4px;
+    #container.info-open #infoPanel {
+      left: 0;
     }
-    #closePanel:hover { color: #999; }
-
     #infoPanel .content {
-      padding: 30px 20px 20px; /* room for close button */
+      padding: 30px 20px 20px;
     }
-    #townName { font-size: 1.5em; margin: 0 0 12px; }
-    .small-info p { margin: 6px 0; font-size: 1em; line-height:1.4; }
-    .small-info .title { color: navy; font-weight:700; margin-right:6px; }
-    .big-info { margin-top:24px; }
+    #townName {
+      font-size: 1.5em; margin: 0 0 12px;
+    }
+    .small-info p {
+      margin: 6px 0; font-size: 1em; line-height: 1.4;
+    }
+    .small-info .title {
+      color: navy; font-weight: 700; margin-right: 6px;
+    }
+    .big-info {
+      margin-top: 24px;
+    }
     .big-info p {
-      margin:10px 0; font-size:1em; line-height:1.4;
-      white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
+      margin: 10px 0; font-size: 1em; line-height: 1.4;
+      white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
     }
-    .big-info .title { color:darkgreen; font-weight:700; margin-right:6px; }
+    .big-info .title {
+      color: darkgreen; font-weight: 700; margin-right: 6px;
+    }
 
-    /* Legend shared */
+    /* -------- Legend Styles -------- */
     .legend {
       margin-top: 30px;
-      font-size:0.9em; line-height:1.5;
-      background:#fff; border:1px solid #003f63;
-      border-radius:6px; padding:10px 12px;
-      box-shadow:0 2px 4px rgba(0,0,0,0.2);
-      font-family:'Roboto',sans-serif;
+      font-size: 0.9em; line-height: 1.5;
+      background: #fff; border: 1px solid #003f63;
+      border-radius: 6px; padding: 10px 12px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
     .legend h3 {
-      margin:0 0 8px; font-size:1em;
-      text-align:center; color:#003f63; font-weight:700;
+      margin: 0 0 8px; font-size: 1em;
+      text-align: center; color: #003f63; font-weight: 700;
     }
-    .legend-group { margin-top:12px; }
-    .legend-group.exempt { margin-top:18px; }
+    .legend-group {
+      margin-top: 12px;
+    }
+    .legend-group.exempt {
+      margin-top: 18px;
+    }
     .legend-title {
-      display:block; color:#003f63; font-weight:700; margin-bottom:6px;
+      display: block; color: #003f63;
+      font-weight: 700; margin-bottom: 6px;
     }
     .legend-item {
-      display:flex; align-items:center; margin:6px 0;
+      display: flex; align-items: center; margin: 6px 0;
     }
     .legend-item .patch {
-      width:18px; height:18px;
-      border:1px solid #fff;
+      width: 18px; height: 18px;
+      border: 1px solid #fff;
       box-shadow: inset 0 0 0 1px #fff;
-      margin-right:8px; flex-shrink:0;
+      margin-right: 8px; flex-shrink: 0;
     }
 
-    /* Map‑side legend */
+    /* -------- Map-side legend -------- */
     #legendMap {
-      position:absolute; bottom:20px; left:20px; z-index:4;
+      position: absolute; bottom: 20px; left: 20px;
+      z-index: 4; width: auto;
     }
-    #container.info-open #legendMap { display:none; }
+    #container.info-open #legendMap {
+      display: none;
+    }
 
-    /* Panel‑side legend */
-    #legendPanel { display:none; }
-    #container.info-open #legendPanel { display:block; }
+    /* -------- Panel-side legend -------- */
+    #legendPanel {
+      display: none;
+    }
+    #container.info-open #legendPanel {
+      display: block;
+    }
 
-    /* Main (search + map) */
+    /* -------- Main (search + map) -------- */
     #main {
-      position:absolute; top:0; left:0;
-      width:100%; height:100%;
-      transition:left 0.5s ease, width 0.5s ease;
+      position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%;
+      transition: left 0.5s ease, width 0.5s ease;
     }
     #container.info-open #main {
-      left:320px; width:calc(100% - 320px);
+      left: 320px; width: calc(100% - 320px);
     }
 
-    /* Search bar */
+    /* -------- Search bar -------- */
     .search-panel {
-      position:absolute; top:0; left:0; right:0;
-      height:60px; background:#f4f4f4;
-      display:flex; align-items:center;
-      padding:0 20px; gap:10px;
-      box-shadow:0 2px 4px rgba(0,0,0,0.1);
-      z-index:10;
+      position: absolute; top: 0; left: 0; right: 0;
+      height: 60px; background: #f4f4f4;
+      display: flex; align-items: center;
+      padding: 0 20px; gap: 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      z-index: 10;
     }
     .input-wrapper {
-      position: relative; flex:1;
+      position: relative; flex: 1;
     }
     .input-wrapper input {
-      width:100%; padding:8px 30px 8px 8px;
-      font-size:16px; border:1px solid #ccc; border-radius:4px;
-      font-family:'Roboto',sans-serif;
-      box-sizing: border-box; /* ensure padding stays inside */
+      width: 100%; padding: 8px 30px 8px 8px;
+      font-size: 16px; border: 1px solid #ccc; border-radius: 4px;
+      box-sizing: border-box;
     }
     .input-wrapper button#clearInput {
-      position:absolute; right:8px; top:50%;
+      position: absolute; right: 8px; top: 50%;
       transform: translateY(-50%);
-      background:none; border:none;
-      font-size:16px; color:#888; cursor:pointer;
-      display:none;
+      background: none; border: none;
+      font-size: 16px; color: #888; cursor: pointer;
+      display: none;
     }
     .input-wrapper button#clearInput:hover {
-      color:#555;
+      color: #555;
     }
     .search-panel button#doSearch {
-      padding:8px 16px; font-size:16px; font-weight:700;
-      background:#005e95; color:#fff; border:none; border-radius:4px;
-      cursor:pointer; font-family:'Roboto',sans-serif;
+      padding: 8px 16px; font-size: 16px; font-weight: 700;
+      background: #005e95; color: #fff;
+      border: none; border-radius: 4px; cursor: pointer;
     }
     .search-panel button#doSearch:hover {
-      background:#003f63;
+      background: #003f63;
     }
 
-    /* Map iframe */
+    /* -------- Map iframe -------- */
     #mapFrame {
-      position:absolute;
-      top:60px; left:0; right:0; bottom:0;
-      border:none; width:100%; height:calc(100% - 60px);
+      position: absolute;
+      top: 60px; left: 0; right: 0; bottom: 0;
+      border: none; width: 100%; height: calc(100% - 60px);
     }
   </style>
 </head>
 <body>
 
-  <div id="container">
+  <!-- Intro Overlay -->
+  <div id="introOverlay">
+    <div id="introPopup">
+      <p>Welcome! Search or click a town to explore MBTA community data—area, population, community type, and capacity requirements.</p>
+      <button id="startButton">Start</button>
+    </div>
+  </div>
 
-    <!-- Map‑side legend -->
+  <div id="container">
+    <!-- Map legend -->
     <div id="legendMap" class="legend">
       <h3>MBTA Communities</h3>
       <div class="legend-group">
@@ -166,9 +220,9 @@
     <div id="infoPanel">
       <button id="closePanel" aria-label="Close">×</button>
       <div class="content">
-        <h2 id="townName">Town Name</h2>
+        <h2 id="townName">Town Name</h2>
         <div class="small-info">
-          <p><span class="title">Area in Sq. Miles:</span><span id="areaField"></span></p>
+          <p><span class="title">Area in Sq. Miles:</span><span id="areaField"></span></p>
           <p><span class="title">Population (2020):</span><span id="popField"></span></p>
         </div>
         <div class="big-info">
@@ -176,7 +230,7 @@
           <p><span class="title">Unit Capacity Requirement:</span><span id="unitField"></span></p>
         </div>
 
-        <!-- Panel‑side legend -->
+        <!-- Panel legend -->
         <div id="legendPanel" class="legend">
           <h3>MBTA Communities</h3>
           <div class="legend-group">
@@ -212,22 +266,18 @@
   </div>
 
   <script>
-    const container  = document.getElementById('container'),
-          mapFrame   = document.getElementById('mapFrame'),
-          input      = document.getElementById('townSearch'),
-          btnSearch  = document.getElementById('doSearch'),
-          btnClearIn = document.getElementById('clearInput'),
-          btnClose   = document.getElementById('closePanel');
+    // Intro overlay logic
+    const intro = document.getElementById('introOverlay'),
+          startBtn = document.getElementById('startButton'),
+          container = document.getElementById('container'),
+          mapFrame  = document.getElementById('mapFrame'),
+          input     = document.getElementById('townSearch'),
+          btnSearch = document.getElementById('doSearch'),
+          btnClearIn= document.getElementById('clearInput'),
+          btnClose  = document.getElementById('closePanel');
 
-    function runSearch() {
-      const name = input.value.trim();
-      if (!name) return;
-      mapFrame.contentWindow.postMessage({ type:'search-town', name }, '*');
-    }
-    btnSearch.addEventListener('click', runSearch);
-    input.addEventListener('keydown', e => {
-      if (e.key === 'Enter') runSearch();
-      setTimeout(toggleClearIcon, 0);
+    startBtn.addEventListener('click', () => {
+      intro.style.display = 'none';
     });
 
     function clearAll() {
@@ -235,36 +285,50 @@
       container.classList.remove('info-open');
     }
 
+    // search logic
+    function runSearch() {
+      const name = input.value.trim();
+      if (!name) return;
+      mapFrame.contentWindow.postMessage({ type:'search-town', name }, '*');
+    }
+
+    btnSearch.addEventListener('click', runSearch);
+    input.addEventListener('keydown', e => {
+      if (e.key === 'Enter') runSearch();
+      setTimeout(toggleClearIcon, 0);
+    });
+
+    // in-input clear
     function toggleClearIcon() {
       btnClearIn.style.display = input.value ? 'block' : 'none';
     }
     btnClearIn.addEventListener('click', () => {
       input.value = '';
       toggleClearIcon();
-      input.focus();
       clearAll();
+      input.focus();
     });
+    toggleClearIcon();
 
+    // panel close
     btnClose.addEventListener('click', clearAll);
 
+    // messages from map
     window.addEventListener('message', e => {
       const msg = e.data;
       if (msg?.type === 'town-selected') {
         const p = msg.properties;
-        document.getElementById('townName').textContent  = p.Municipality    || 'N/A';
-        document.getElementById('areaField').textContent = p.MBTAStationMunicipaliti_Clip1_A   || 'N/A';
-        document.getElementById('popField').textContent  = p.MBTAStationMunicipaliti_Clip1_P   || 'N/A';
-        document.getElementById('commField').textContent = p.data0k5Yh_TableToExcel_ExcelT_2   || 'N/A';
-        document.getElementById('unitField').textContent = p.data0k5Yh_TableToExcel_ExcelT_3    || 'N/A';
+        document.getElementById('townName').textContent   = p.Municipality    || 'N/A';
+        document.getElementById('areaField').textContent  = p.MBTAStationMunicipaliti_Clip1_A   || 'N/A';
+        document.getElementById('popField').textContent   = p.MBTAStationMunicipaliti_Clip1_P   || 'N/A';
+        document.getElementById('commField').textContent  = p.data0k5Yh_TableToExcel_ExcelT_2   || 'N/A';
+        document.getElementById('unitField').textContent  = p.data0k5Yh_TableToExcel_ExcelT_3    || 'N/A';
         container.classList.add('info-open');
       }
       else if (msg?.type === 'clear-town') {
-        container.classList.remove('info-open');
+        clearAll();
       }
     });
-
-    // initialize clear‑input visibility
-    toggleClearIcon();
   </script>
 </body>
 </html>
