--- a/search.html
+++ b/search.html
@@ -194,7 +194,7 @@
   <!-- Intro Overlay -->
   <div id="introOverlay">
     <div id="introPopup">
-      <p>Welcome! Search or click a town to explore MBTA community data—area, population, community type, and capacity requirements.</p>
+      <p>Welcome! Search or click a town to explore the MBTA Communities.</p>
       <button id="startButton">Start</button>
     </div>
   </div>
