--- a/map_with_button.html
+++ b/map_with_button.html
@@ -1,29 +1,10 @@
+<!-- map_with_button.html -->
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Map with Fade & Notify</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-  <!-- Roboto & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-
-  <!-- Mapbox GL JS -->
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
-
-  <style>
-    body, html { margin:0; padding:0; height:100%; font-family:'Roboto',sans-serif; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
-    #homeButton {
-      position:absolute; top:10px; left:10px; z-index:2;
-      padding:10px 20px; font-size:16px; font-weight:700;
-      background:rgba(255,255,255,0.9); color:#005e95; border:none; border-radius:8px;
-      cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.3); backdrop-filter:blur(4px);
-    }
-    .material-icons { font-size:24px; }
-  </style>
+  <!-- … your existing <meta>, <link> and <style> … -->
 </head>
 <body>
 
@@ -56,17 +37,17 @@
     function getFeatureBounds(feature) {
       const geom = feature.geometry;
       const pts  = geom.type==='MultiPolygon'
-        ? geom.coordinates.flat(2)
-        : geom.coordinates[0];
+        ? feature.geometry.coordinates.flat(2)
+        : feature.geometry.coordinates[0];
       return pts.reduce((b,c)=>b.extend(c), new mapboxgl.LngLatBounds());
     }
 
     function selectFeature(feature) {
       const bb = getFeatureBounds(feature);
-      map.fitBounds(bb,{padding:40,duration:800});
+      map.fitBounds(bb, { padding:40, animate: false });
 
       map.setFilter('fade-layer',
-        ['!=',['get',geojsonField],feature.properties[geojsonField]]
+        ['!=',['get',geojsonField], feature.properties[geojsonField]]
       );
       map.setLayoutProperty('fade-layer','visibility','visible');
 
@@ -82,25 +63,32 @@
 
     function clearSelection() {
       map.setLayoutProperty('fade-layer','visibility','none');
-      map.getSource('highlight-town').setData({ type:'FeatureCollection', features:[] });
-      map.flyTo({ center:defaultCenter, zoom:defaultZoom, speed:1.2, essential:true });
-      window.parent.postMessage({ type:'clear-town' }, '*');
+      map.getSource('highlight-town').setData({
+        type:'FeatureCollection', features:[]
+      });
+      // jump instantly back
+      map.jumpTo({ center: defaultCenter, zoom: defaultZoom });
+      // notify parent once
+      window.parent.postMessage({ type:'clear-complete' }, '*');
     }
 
-    map.on('load',()=>{
+    map.on('load', () => {
       fetch(geojsonURL)
-        .then(r=>r.ok? r.json():Promise.reject(r.status))
-        .then(data=> municipalitiesData = data.features)
+        .then(r=>r.ok? r.json(): Promise.reject(r.status))
+        .then(data => municipalitiesData = data.features)
         .catch(err=>console.error('GeoJSON load failed:',err));
 
-      map.addSource('municipalities-full',{type:'geojson',data:geojsonURL});
+      map.addSource('municipalities-full', { type:'geojson', data:geojsonURL });
       map.addLayer({
         id:'fade-layer', type:'fill', source:'municipalities-full',
         paint:{'fill-color':'#888','fill-opacity':0.5},
         layout:{visibility:'none'}
       });
 
-      map.addSource('highlight-town',{type:'geojson',data:{type:'FeatureCollection',features:[] }});
+      map.addSource('highlight-town', {
+        type:'geojson',
+        data:{ type:'FeatureCollection', features:[] }
+      });
       map.addLayer({
         id:'highlight-fill', type:'fill', source:'highlight-town',
         paint:{'fill-color':'#FFEB3B','fill-opacity':0.8}
@@ -112,26 +100,29 @@
 
       document.getElementById('homeButton').onclick = clearSelection;
 
-      map.on('click', vectorLayerId, e=>{
-        if(!municipalitiesData.length) return;
+      map.on('click', vectorLayerId, e => {
+        if (!municipalitiesData.length) return;
         const name = e.features[0].properties[tileField];
-        const match = municipalitiesData.find(
-          f=>f.properties[geojsonField]?.toLowerCase()===name.toLowerCase()
+        const match = municipalitiesData.find(f =>
+          f.properties[geojsonField]?.toLowerCase() === name.toLowerCase()
         );
-        if(match) selectFeature(match);
+        if (match) selectFeature(match);
       });
     });
 
-    window.addEventListener('message', e=>{
-      const msg=e.data;
-      if(!municipalitiesData.length) return;
-      if(msg?.type==='search-town'){
-        const term=msg.name.trim().toLowerCase();
-        const match = municipalitiesData.find(
-          f=>f.properties[geojsonField]?.toLowerCase()===term
+    // handle parent messages
+    window.addEventListener('message', e => {
+      const msg = e.data;
+      if (!municipalitiesData.length) return;
+
+      if (msg?.type === 'search-town') {
+        const term = msg.name.trim().toLowerCase();
+        const match = municipalitiesData.find(f =>
+          f.properties[geojsonField]?.toLowerCase() === term
         );
-        if(match) selectFeature(match);
-      } else if(msg?.type==='clear-town'){
+        if (match) selectFeature(match);
+      }
+      else if (msg?.type === 'clear-request') {
         clearSelection();
       }
     });
