--- a/map_with_button.html
+++ b/map_with_button.html
@@ -1,23 +1,65 @@
-<!-- map_with_button.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Map with Fade & Notify</title>
-  <!-- … your existing <meta>, <link> and <style> … -->
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  <!-- Roboto & Material Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+
+  <!-- Mapbox GL JS -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Roboto', sans-serif;
+    }
+    #map {
+      position: absolute;
+      top: 0; bottom: 0; left: 0; right: 0;
+    }
+    #homeButton {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 2;
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: 700;
+      background: rgba(255,255,255,0.9);
+      color: #005e95;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      backdrop-filter: blur(4px);
+    }
+    .material-icons {
+      font-size: 24px;
+    }
+  </style>
 </head>
 <body>
 
   <button id="homeButton" title="Clear & Home">
     <span class="material-icons">home</span>
   </button>
-
   <div id="map"></div>
 
   <script>
+    // ——————————————————————————————————————————————————————————
+    //  Your existing map logic, unchanged
+    // ——————————————————————————————————————————————————————————
+
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
-    const defaultCenter    = [-71.245,42.254],
+    const defaultCenter    = [-71.245, 42.254],
           defaultZoom      = 8,
           vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
           tileField        = 'Municipali',
@@ -28,78 +70,100 @@
     let municipalitiesData = [];
 
     const map = new mapboxgl.Map({
-      container:'map',
-      style:'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
-      center:defaultCenter, zoom:defaultZoom,
-      minZoom:defaultZoom, maxZoom:22, maxBounds:bounds
+      container: 'map',
+      style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
+      center: defaultCenter,
+      zoom: defaultZoom,
+      minZoom: defaultZoom,
+      maxZoom: 22,
+      maxBounds: bounds
     });
 
     function getFeatureBounds(feature) {
-      const geom = feature.geometry;
-      const pts  = geom.type==='MultiPolygon'
+      const coords = feature.geometry.type === 'MultiPolygon'
         ? feature.geometry.coordinates.flat(2)
         : feature.geometry.coordinates[0];
-      return pts.reduce((b,c)=>b.extend(c), new mapboxgl.LngLatBounds());
+      return coords.reduce(
+        (b, c) => b.extend(c),
+        new mapboxgl.LngLatBounds()
+      );
     }
 
     function selectFeature(feature) {
       const bb = getFeatureBounds(feature);
-      map.fitBounds(bb, { padding:40, animate: false });
+      map.fitBounds(bb, { padding: 40, animate: false });
 
-      map.setFilter('fade-layer',
-        ['!=',['get',geojsonField], feature.properties[geojsonField]]
+      map.setFilter(
+        'fade-layer',
+        ['!=', ['get', geojsonField], feature.properties[geojsonField]]
       );
-      map.setLayoutProperty('fade-layer','visibility','visible');
+      map.setLayoutProperty('fade-layer', 'visibility', 'visible');
 
       map.getSource('highlight-town').setData({
-        type:'FeatureCollection', features:[feature]
+        type: 'FeatureCollection',
+        features: [feature]
       });
 
       window.parent.postMessage({
-        type:'town-selected',
+        type: 'town-selected',
         properties: feature.properties
       }, '*');
     }
 
     function clearSelection() {
-      map.setLayoutProperty('fade-layer','visibility','none');
+      map.setLayoutProperty('fade-layer', 'visibility', 'none');
       map.getSource('highlight-town').setData({
-        type:'FeatureCollection', features:[]
+        type: 'FeatureCollection',
+        features: []
       });
-      // jump instantly back
       map.jumpTo({ center: defaultCenter, zoom: defaultZoom });
-      // notify parent once
-      window.parent.postMessage({ type:'clear-complete' }, '*');
+      window.parent.postMessage({ type: 'clear-complete' }, '*');
     }
 
     map.on('load', () => {
+      // load GeoJSON features into an array
       fetch(geojsonURL)
-        .then(r=>r.ok? r.json(): Promise.reject(r.status))
+        .then(r => r.ok ? r.json() : Promise.reject(r.status))
         .then(data => municipalitiesData = data.features)
-        .catch(err=>console.error('GeoJSON load failed:',err));
+        .catch(err => console.error('GeoJSON load failed:', err));
 
-      map.addSource('municipalities-full', { type:'geojson', data:geojsonURL });
+      // base layer (faded)
+      map.addSource('municipalities-full', {
+        type: 'geojson',
+        data: geojsonURL
+      });
       map.addLayer({
-        id:'fade-layer', type:'fill', source:'municipalities-full',
-        paint:{'fill-color':'#888','fill-opacity':0.5},
-        layout:{visibility:'none'}
+        id: 'fade-layer',
+        type: 'fill',
+        source: 'municipalities-full',
+        paint: {
+          'fill-color': '#888',
+          'fill-opacity': 0.5
+        },
+        layout: { visibility: 'none' }
       });
 
+      // highlight layer
       map.addSource('highlight-town', {
-        type:'geojson',
-        data:{ type:'FeatureCollection', features:[] }
+        type: 'geojson',
+        data: { type: 'FeatureCollection', features: [] }
       });
       map.addLayer({
-        id:'highlight-fill', type:'fill', source:'highlight-town',
-        paint:{'fill-color':'#FFEB3B','fill-opacity':0.8}
+        id: 'highlight-fill',
+        type: 'fill',
+        source: 'highlight-town',
+        paint: { 'fill-color': '#FFEB3B', 'fill-opacity': 0.8 }
       });
       map.addLayer({
-        id:'highlight-line', type:'line', source:'highlight-town',
-        paint:{'line-color':'#FF9800','line-width':2}
+        id: 'highlight-line',
+        type: 'line',
+        source: 'highlight-town',
+        paint: { 'line-color': '#FF9800', 'line-width': 2 }
       });
 
       document.getElementById('homeButton').onclick = clearSelection;
 
+      // click-to-select
       map.on('click', vectorLayerId, e => {
         if (!municipalitiesData.length) return;
         const name = e.features[0].properties[tileField];
@@ -110,11 +174,10 @@
       });
     });
 
-    // handle parent messages
+    // listen for the parent’s search/clear messages
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
-
       if (msg?.type === 'search-town') {
         const term = msg.name.trim().toLowerCase();
         const match = municipalitiesData.find(f =>
