--- a/map_with_button.html
+++ b/map_with_button.html
@@ -15,34 +15,21 @@
 
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
+      margin: 0; padding: 0; height: 100%;
       font-family: 'Roboto', sans-serif;
     }
     #map {
-      position: absolute;
-      top: 0; bottom: 0; left: 0; right: 0;
+      position: absolute; top: 0; bottom: 0; left: 0; right: 0;
     }
     #homeButton {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 2;
-      padding: 10px 20px;
-      font-size: 16px;
-      font-weight: 700;
-      background: rgba(255,255,255,0.9);
-      color: #005e95;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
+      position: absolute; top: 10px; left: 10px; z-index: 2;
+      padding: 10px 20px; font-size: 16px; font-weight: 700;
+      background: rgba(255,255,255,0.9); color: #005e95;
+      border: none; border-radius: 8px; cursor: pointer;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       backdrop-filter: blur(4px);
     }
-    .material-icons {
-      font-size: 24px;
-    }
+    .material-icons { font-size: 24px; }
   </style>
 </head>
 <body>
@@ -53,19 +40,15 @@
   <div id="map"></div>
 
   <script>
-    // ——————————————————————————————————————————————————————————
-    //  Your existing map logic, unchanged
-    // ——————————————————————————————————————————————————————————
-
     mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
 
-    const defaultCenter    = [-71.245, 42.254],
-          defaultZoom      = 8,
-          vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
-          tileField        = 'Municipali',
-          geojsonField     = 'Municipality',
-          bounds           = [[-72.5,41.5],[-69.5,43.0]],
-          geojsonURL       = './MunicipalitiesByCommunityType.geojson';
+    const defaultCenter = [-71.245, 42.254],
+          defaultZoom   = 8,
+          vectorLayerId = 'municipalitiesbycommunitytype-c8ks3h copy',
+          tileField     = 'Municipali',
+          geojsonField  = 'Municipality',
+          bounds        = [[-72.5,41.5],[-69.5,43.0]],
+          geojsonURL    = './MunicipalitiesByCommunityType.geojson';
 
     let municipalitiesData = [];
 
@@ -90,8 +73,12 @@
     }
 
     function selectFeature(feature) {
+      // animate zoom in over 500ms
       const bb = getFeatureBounds(feature);
-      map.fitBounds(bb, { padding: 40, animate: false });
+      map.fitBounds(bb, {
+        padding: 40,
+        duration: 500
+      });
 
       map.setFilter(
         'fade-layer',
@@ -116,18 +103,21 @@
         type: 'FeatureCollection',
         features: []
       });
-      map.jumpTo({ center: defaultCenter, zoom: defaultZoom });
+      // animate zoom out over 500ms
+      map.easeTo({
+        center: defaultCenter,
+        zoom: defaultZoom,
+        duration: 500
+      });
       window.parent.postMessage({ type: 'clear-complete' }, '*');
     }
 
     map.on('load', () => {
-      // load GeoJSON features into an array
       fetch(geojsonURL)
         .then(r => r.ok ? r.json() : Promise.reject(r.status))
         .then(data => municipalitiesData = data.features)
         .catch(err => console.error('GeoJSON load failed:', err));
 
-      // base layer (faded)
       map.addSource('municipalities-full', {
         type: 'geojson',
         data: geojsonURL
@@ -136,14 +126,10 @@
         id: 'fade-layer',
         type: 'fill',
         source: 'municipalities-full',
-        paint: {
-          'fill-color': '#888',
-          'fill-opacity': 0.5
-        },
+        paint: { 'fill-color': '#888', 'fill-opacity': 0.5 },
         layout: { visibility: 'none' }
       });
 
-      // highlight layer
       map.addSource('highlight-town', {
         type: 'geojson',
         data: { type: 'FeatureCollection', features: [] }
@@ -163,7 +149,6 @@
 
       document.getElementById('homeButton').onclick = clearSelection;
 
-      // click-to-select
       map.on('click', vectorLayerId, e => {
         if (!municipalitiesData.length) return;
         const name = e.features[0].properties[tileField];
@@ -174,7 +159,6 @@
       });
     });
 
-    // listen for the parent’s search/clear messages
     window.addEventListener('message', e => {
       const msg = e.data;
       if (!municipalitiesData.length) return;
