--- a/map_with_button.html
+++ b/map_with_button.html
@@ -1,3 +1,4 @@
+<!-- map_with_button.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -66,22 +67,18 @@
       const coords = feature.geometry.type === 'MultiPolygon'
         ? feature.geometry.coordinates.flat(2)
         : feature.geometry.coordinates[0];
-      return coords.reduce(
-        (b, c) => b.extend(c),
-        new mapboxgl.LngLatBounds()
-      );
+      return coords.reduce((b, c) => b.extend(c), new mapboxgl.LngLatBounds());
     }
 
     function selectFeature(feature) {
-      // animate zoom in over 500ms
+      // animate zoom-in over 500ms
       const bb = getFeatureBounds(feature);
       map.fitBounds(bb, {
         padding: 40,
-        duration: 500
+        duration: 1000
       });
 
-      map.setFilter(
-        'fade-layer',
+      map.setFilter('fade-layer',
         ['!=', ['get', geojsonField], feature.properties[geojsonField]]
       );
       map.setLayoutProperty('fade-layer', 'visibility', 'visible');
@@ -103,11 +100,11 @@
         type: 'FeatureCollection',
         features: []
       });
-      // animate zoom out over 500ms
+      // animate zoom-out over 500ms
       map.easeTo({
         center: defaultCenter,
         zoom: defaultZoom,
-        duration: 500
+        duration: 1000
       });
       window.parent.postMessage({ type: 'clear-complete' }, '*');
     }
@@ -119,13 +116,10 @@
         .catch(err => console.error('GeoJSON load failed:', err));
 
       map.addSource('municipalities-full', {
-        type: 'geojson',
-        data: geojsonURL
+        type: 'geojson', data: geojsonURL
       });
       map.addLayer({
-        id: 'fade-layer',
-        type: 'fill',
-        source: 'municipalities-full',
+        id: 'fade-layer', type: 'fill', source: 'municipalities-full',
         paint: { 'fill-color': '#888', 'fill-opacity': 0.5 },
         layout: { visibility: 'none' }
       });
@@ -135,15 +129,11 @@
         data: { type: 'FeatureCollection', features: [] }
       });
       map.addLayer({
-        id: 'highlight-fill',
-        type: 'fill',
-        source: 'highlight-town',
+        id: 'highlight-fill', type: 'fill', source: 'highlight-town',
         paint: { 'fill-color': '#FFEB3B', 'fill-opacity': 0.8 }
       });
       map.addLayer({
-        id: 'highlight-line',
-        type: 'line',
-        source: 'highlight-town',
+        id: 'highlight-line', type: 'line', source: 'highlight-town',
         paint: { 'line-color': '#FF9800', 'line-width': 2 }
       });
 
